fix css overflow for responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -613,6 +613,8 @@ input, textarea
 	margin-bottom: 64px;
 
 	text-align: left;
+
+	word-break: break-all;
 }
 
 #blog #post .title::before, #blog #comments .title::before
